# moerduo

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  autostart.rs  db.rs  main.rs  player.rs  playlist.rs  recorder.rs  restart.rs  scheduler.rs  settings.rs  stats.rs  task.rs
src/components/: DeleteConfirmDialog.tsx  PlayController.tsx
src/contexts/: PlayerContext.tsx
src/hooks/: useTheme.tsx
src/pages/: AudioLibrary.tsx  Help.tsx  Playlists.tsx  Settings.tsx  Statistics.tsx  Tasks.tsx
src/styles/: globals.css
