[package]
name = "moerduo"
version = "0.1.0"
description = "磨耳朵 - 中小学生英语听力定时播放系统"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "notification-all", "shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
rodio = "0.17"
chrono = "0.4"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4"] }
cpal = "0.15"
hound = "3.5"
auto-launch = "0.5"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(windows)".dependencies]
windows = { version = "0.51", features = ["Win32_System_Power"] }
