[package]
name = "moerduo"
version = "0.1.0"
description = "磨耳朵 - 开源免费跨平台定时音频播放软件"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "dialog-all", "fs-all", "notification-all", "shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
rodio = "0.17"
chrono = "0.4"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4"] }
cpal = "0.15"
hound = "3.5"
auto-launch = "0.5"
symphonia = { version = "0.5", features = ["all"] }
ffprobe = "0.4"
zip = "0.6"
dirs = "5.0"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"

[target."cfg(windows)".dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser"] }
windows = { version = "0.51", features = ["Win32_System_Power"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
